--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "dev": "vite --port 8080",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "semantic-release"
   },
   "devDependencies": {
     "@types/three": "^0.148.0",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "three": "^0.148.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^19.0.5"
   }
 }
