--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "commit": "git-cz",
     "dev": "vite --port 8080",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "release": "semantic-release"
   },
   "devDependencies": {
-    "@types/three": "^0.148.0",
-    "@types/webpack-bundle-analyzer": "^4.6.0",
-    "three": "^0.148.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "semantic-release": "^19.0.5"
+    "@types/three": "^0.148.0",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
+    "commitizen": "^4.2.6",
+    "cz-conventional-changelog": "3.3.0",
+    "semantic-release": "^19.0.5",
+    "three": "^0.148.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
