feat: adiciona THREEx3 nas dependências

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "three-x3": "^0.0.10"
   }
 }
