--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-  "branches": ["main", {"name": "alpha", "prerelease": true}, "next"],
+  "branches": [{"name": "main", "prerelease": true}, "next"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
